--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
+    "nanoid": "^5.0.5",
+    "phaser": "^3.60.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.0",
-    "nanoid": "^5.0.5",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
